styles-laptop.css
@media screen and (max-width: 1440px) and (min-width: 951px) {
    body {
      font-family: 'Libre Franklin', sans-serif;
      font-size: 1em;
      line-height: 1.15;
    }
  
    .container-header {
      display: flex;
      justify-content: space-evenly;
      align-items: flex-end;
      text-align: center;
      background-color: rgb(209, 202, 202);
    }
  
    .logo {
      width: 30%;
    }
  
    .logo img {
      display: flex;
      height: 50%;
      width: 50%;
      margin-left: 20%;
    }
  
    .name {
      width: 25%;
    }
  
    .date {
      display: flex;
      justify-content: flex-start;
      width: 25%;
      margin-bottom: 4%;
    }
  
    .name h1 a {
      font-weight: 600;
      color: rgb(37, 37, 148);
      text-decoration: none;
    }
  
    .name h1 {
      display: flex;
      align-self: flex-start;
      justify-content: flex-start;
      flex: 1;
      margin-bottom: 15.5%;
    }
  
    .suscribe a {
      display: flex;
      justify-content: center;
      align-self: center;
      margin-bottom: 35%;
      margin-right: 25%;
      font-weight: 600;
      color: rgb(37, 37, 148);
      text-decoration: none;
      font-size: 20px;
    }
  
    .suscribe a:hover {
      color: darkred;
    }
  
    .container-menu ul {
      display: flex;
    }
  
    .container-menu ul {
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 100%;
      margin-top: 0%;
      background-color: black;
    }
  
    .container-menu li {
      margin-left: 5%;
      margin-right: 5%;
      font-size: 1.5em;
    }
  
    .container-menu a {
      color: rgb(209, 202, 202);
      text-decoration: none;
      font-size: 1.3em;
    }
  
    .hamburger-menu {
      display: none;
    }
  
    .container-middle {
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
      flex-direction: row;
      flex-wrap: wrap;
    }
  
    .container-main-news {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
      flex-wrap: wrap;
      flex-grow: 1;
      order: 2;
      width: 50%;
    }
  
    .container-main-news h3 {
      display: flex;
      align-self: center;
      padding-top: 2%;
      font-size: 2.5em;
      font-weight: 600;
      color: #252594;
      text-decoration: none;
    }
  
    .container-main-news p {
      align-self: center;
      justify-content: center;
      align-content: center;
      text-align: center;
      font-weight: 100;
      color: black;
      max-width: 75%;
      text-decoration: none;
      padding: 1%;
      line-height: 1.5em;
      font-size: 1.5em;
    }
  
    .container-main-news a {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      width: 100%;
      padding-bottom: 8%;
      text-decoration: none;
    }
  
    .container-main-news a img {
      display: flex;
      align-self: center;
    }
  
    .box-main-2 img {
      width: 80%;
      height: 20%;
    }
  
    .box-main-3 img {
      width: 50%;
      height: 10%;
    }
  
    .box-main-1 {
      display: flex;
      justify-content: center;
      align-items: center;
      margin-top: 5%;
    }

    .box-main-2 h3 {
      text-align: center;
    }
  
    .section-secondary-news {
      display: flex;
      justify-content: center;
      order: 1;
      width: 17%;
      flex-wrap: wrap;
      padding-top: 3%;
      padding-left: 3%;
    }
  
    .container-aside ul {
      flex-wrap: wrap;
      line-height: 2em;
    }
  
    .container-aside ul li {
      padding: 5% 0 5% 0;
      border: 1px solid rgb(209, 202, 202);
      list-style-type: none;
      font-size: 1.5em;
      text-align: center;
    }
  
    .container-aside ul li a {
      color: #252594;
      text-decoration: none;
      font-weight: 600;
    }
  
    .container-aside ul li a:hover {
      color: darkred;
    }
  
    .header-ul-news {
      max-height: 20%;
      background-color: rgb(170, 148, 148);
      border-radius: 6px;
      font-style: italic;
    }
  
    .header-ul-news a {
      font-size: 1.4em;
    }
  
    .container-ads {
      display: flex;
      flex-direction: column;
      width: 20%;
      order: 3;
      padding: 2%;
      margin-right: 5%;
    }
  
    .container-ads img {
      padding-top: 7%;
    }
  
    .container-ads a {
      padding-bottom: 30%;
      text-align: center;
      color: rgb(136, 136, 50);
      font-weight: 600;
      text-transform: uppercase;
      text-decoration: none;
    }
  
    .container-footer-boxes {
      display: flex;
      align-items: flex-start;
      justify-content: space-between;
      padding: 0 15% 0 15%;
      line-height: 2em;
      text-align: center;
    }
  
    .container-footer-boxes a {
      text-decoration: none;
      color: black;
      font-weight: 600;
    }
  
    .container-footer-boxes a:hover {
      color: darkred;
    }
  
    .copyright-license {
      display: flex;
      justify-content: center;
      text-align: center;
      padding: 8% 15% 0 15%;
      font-size: 1em;
    }
  }

